Make gradle to upload to s3 by default

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'maven'
 
-defaultTasks 'clean', 'upload'
+defaultTasks 'uploadS3'
 
 project.ext.shortName = 'wobc-client'
 project.ext.packageDir = 'build/package'
