--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "socket.io": "^1.3.5",
     "underscore": "^1.8.3",
     "winston": "^1.0.0"
+  },
+  "scripts": {
+    "start": "node src/main/web/main.js"
   }
 }
