--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "dependencies": {
-    "express": "^4.12.4",
-    "requirejs": "^2.1.17",
-    "socket.io": "^1.3.5",
-    "underscore": "^1.8.3",
-    "winston": "^1.0.0"
+    "koa": "^2.11.0",
+    "lodash": "^4.14",
+    "requirejs": "^2.3.6",
+    "socket.io": "^2.1.4",
+    "winston": "^2.4.4"
   },
   "scripts": {
-    "start": "node src/main/web/main.js"
+    "start": "node src/main/web/main.ts"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14",
+    "@types/node": "^13.1.4",
+    "@types/socket.io": "^2.1.4",
+    "@types/winston": "^2.4.4",
+    "typescript": "^3.7.4"
   }
 }
